test-output/src/tests/snapshots/test_output__tests__echo__erlang-echo_custom_type.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub type Wibble {
  Wibble(a: Int, b: String)
  Wobble(a: List(Float))
  Woo
}

pub fn main() {
  echo Wibble(1, "hello")
  echo Wobble([1.0, 1.1])
  echo Woo
}


--- gleam run output ----------------
[90msrc/main.gleam:11[39m
Wibble(1, "hello")
[90msrc/main.gleam:12[39m
Wobble([1.0, 1.1])
[90msrc/main.gleam:13[39m
Woo
