test-output/src/tests/snapshots/test_output__tests__echo__javascript-echo_circular_reference.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2025 The Gleam contributors

pub fn main() {
  echo circular_reference()
  Nil
}

type Thing

@external(javascript, "./main_ffi.mjs", "circular_reference")
fn circular_reference() -> Thing


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
#(//js(circular reference))
