test-output/src/tests/snapshots/test_output__tests__echo__javascript-echo_nan_infinity.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  let infinity = 1.0e300 *. 1.0e300
  echo infinity
  echo infinity /. infinity
}


--- gleam run output ----------------
[90msrc/main.gleam:6[39m
//js(Infinity)
[90msrc/main.gleam:7[39m
//js(NaN)
